apps/pma/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: pma
spec:
  replicas: 1
  selector:
    matchLabels: { app: phpmyadmin }
  template:
    metadata:
      labels: { app: phpmyadmin }
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:5.2
          ports: [{ containerPort: 80 }]
          resources:
            requests: { cpu: 50m, memory: 128Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: pma
spec:
  selector: { app: phpmyadmin }
  ports: [{ port: 80, targetPort: 80 }]
